# fsm-robot

./: .gitignore  CMakeLists.txt  CMakeLists.txt.tpl  Dockerfile  README.md  TODO.md  act_and_wait.cpp  act_and_wait.h  base_state.cpp  base_state.h  basic_connection.cpp  basic_connection.h  basic_state.cpp  basic_state.h  cevents.h  connection_factory.cpp  connection_factory.h  connection_factory_manager.h  connection_types.h  example.cpp.tpl  example.h.tpl  example_impl.cpp.tpl  game_connection.h  idle.cpp  idle.h  main.cpp  main.py  main.xml  readme.md  robot.cpp  robot.h  sample-case.xml  simple.xml  state_factory.cpp  state_factory.cpp.tpl  state_factory.h  states.yaml  testcase.cpp  testcase.h  testcase_manager.cpp  (+5 more)
src/: CMakeLists.txt  basic_state.cpp  basic_state.h  main.cpp  state_factory.cpp  testcase.cpp  testcase.h  testcase_manager.cpp  testcase_manager.h  utils.cpp  utils.h
src/env_logger/: CMakeLists.txt  logger.cpp  logger.h  logger_test.cpp  parser.cpp
src/net_base/: CMakeLists.txt  basic_connection.cpp  basic_robot.cpp  connection_factory.cpp  connection_factory.h
src/net_x51/: CMakeLists.txt  connection_types.h  x51_connection.h  x51_connection_factory.cpp  x51_connection_factory.h  x51_netclient_manager.h
src/robot/: CMakeLists.txt  basic_connection.h  basic_robot.h  send_wait_event_state.cpp  send_wait_event_state.h  utils.h  x51_connection.cpp  x51_connection.h  x51_connection_factory.h  x51_connection_test.cpp  x51_netclient.cpp  x51_netclient.h  x51_netclient_manager.cpp
src/states/: CMakeLists.txt  idle.h
src/states/autogen/: CMakeLists.txt  state_CEventChooseRole.cpp  state_CEventChooseRole.h  state_CEventClientLoadAccountInfo.cpp  state_CEventClientLoadAccountInfo.h  state_CEventConnectRes.cpp  state_CEventConnectRes.h  state_CEventEditRole.cpp  state_CEventEditRole.h  state_CEventHeart.h  state_CEventLogin.cpp  state_CEventRefreshPlayerInfo.cpp  state_CEventRefreshPlayerInfo.h  state_ConnectGame.cpp  state_ConnectGame.h  state_DisconnectGame.cpp  state_DisconnectGame.h  state_GameConnected.cpp  state_GameConnected.h  state_InRoom.cpp  state_InRoom.h  state_Logined.cpp  state_SleepInRoom.cpp  state_SleepInRoom.h  state_factory.cpp
src/states/autogen/autochess/: state_CEventAutoChessCoorResult.cpp  state_CEventAutoChessCoorResult.h  state_CEventAutoChessEnterMainUI.cpp  state_CEventAutoChessEnterMainUI.h  state_CEventAutoChessNotifyClientCreateMatchRes.cpp  state_CEventAutoChessNotifyClientCreateMatchRes.h  state_CEventAutoChessStartCoor.cpp  state_CEventAutoChessStartCoor.h  state_CEventAutoChessStopCoor.cpp  state_CEventAutoChessStopCoor.h  state_EnterMainUI.cpp  state_EnterMainUI.h  state_NotifyClientCreateMatchRes.cpp  state_NotifyClientCreateMatchRes.h  state_StartCoor.cpp  state_StartCoor.h  state_StopCoor.cpp  state_StopCoor.h  state_WaitCoorResult.cpp  state_WaitCoorResult.h
src/states/autogen/login/: state_CEventChooseRole.cpp  state_CEventClientLoadAccountInfo.cpp  state_CEventEditRole.cpp  state_CEventRefreshPlayerInfo.cpp  state_ChooseRole.cpp  state_ChooseRole.h  state_ConnectGame.cpp  state_DisconnectGame.cpp  state_DisconnectGame.h  state_EditRole.cpp  state_EditRole.h  state_GameConnected.cpp  state_GameConnected.h  state_LoadAccountInfo.cpp  state_LoadAccountInfo.h  state_Logined.cpp  state_Logined.h  state_RefreshPlayerInfo.cpp  state_RefreshPlayerInfo.h  state_WaitConnectRes.cpp  state_WaitConnectRes.h
src/states/impl/: state_CEventChooseRole_impl.cpp  state_CEventClientLoadAccountInfo_impl.cpp  state_CEventConnectRes_impl.cpp  state_CEventEditRole_impl.cpp  state_CEventHeart_impl.cpp  state_CEventLogin_impl.cpp  state_CEventRefreshPlayerInfo_impl.cpp  state_ConnectGame_impl.cpp  state_DisconnectGame_impl.cpp  state_GameConnected_impl.cpp  state_InRoom_impl.cpp  state_Logined_impl.cpp
src/states/impl/autochess/: state_CEventAutoChessCoorResult_impl.cpp  state_CEventAutoChessEnterMainUI_impl.cpp  state_CEventAutoChessNotifyClientCreateMatchRes_impl.cpp  state_CEventAutoChessStartCoor_impl.cpp  state_CEventAutoChessStopCoor_impl.cpp  state_EnterMainUI_impl.cpp  state_NotifyClientCreateMatchRes_impl.cpp  state_StartCoor_impl.cpp  state_StopCoor_impl.cpp  state_WaitCoorResult_impl.cpp
src/states/impl/login/: state_CEventChooseRole_impl.cpp  state_CEventClientLoadAccountInfo_impl.cpp  state_CEventConnectRes_impl.cpp  state_CEventEditRole_impl.cpp  state_CEventRefreshPlayerInfo_impl.cpp  state_ChooseRole_impl.cpp  state_ConnectGame_impl.cpp  state_DisconnectGame_impl.cpp  state_EditRole_impl.cpp  state_GameConnected_impl.cpp  state_LoadAccountInfo_impl.cpp  state_Logined_impl.cpp  state_RefreshPlayerInfo_impl.cpp  state_WaitConnectRes_impl.cpp
src/target_projs/x51/: BiboProtoBuffer.patch  proj.cmake  proj.patch
src/target_projs/x51/dummy_src/: ConnectionFactoryImpl.cpp  (+4 more)
src/testcase/: CMakeLists.txt  basic_state.h  chart_parser.cpp  chart_parser.h  chart_parser_test.cpp  idle.h  state_factory.h  testcase.cpp  testcase.h  testcase_manager.cpp  testcase_manager.h  testcase_manager_test.cpp  testcase_test.cpp  xdoc_manager.cpp  xdoc_manager.h
states/: CMakeLists.txt  idle.cpp  idle.h  state_CEventHeart.cpp  state_CEventHeart.h  state_CEventHeart_impl.cpp  state_CEventLogin.cpp  state_CEventLogin.h  state_CEventLogin_impl.cpp  state_ConnectGame.cpp  state_ConnectGame.h  state_ConnectGame_impl.cpp  state_DisconnectGame.cpp  state_DisconnectGame.h  state_DisconnectGame_impl.cpp  state_InRoom.cpp  state_InRoom.h  state_InRoom_impl.cpp
states/autogen/: CMakeLists.txt  state_CEventHeart.cpp  state_CEventHeart.h  state_CEventHeart_impl.cpp  state_CEventLogin.cpp  state_CEventLogin.h  state_CEventLogin_impl.cpp  state_ConnectGame.cpp  state_ConnectGame.h  state_ConnectGame_impl.cpp  state_DisconnectGame.cpp  state_DisconnectGame.h  state_DisconnectGame_impl.cpp  state_InRoom.cpp  state_InRoom.h  state_InRoom_impl.cpp  state_SleepInRoom.h
states/impl/: state_CEventHeart_impl.cpp  state_CEventLogin_impl.cpp  state_ConnectGame_impl.cpp  state_DisconnectGame_impl.cpp  state_InRoom_impl.cpp  state_SleepInRoom_impl.cpp
(+25 files in other folders)
